# brilliance-server

./: .gitignore  Cargo.toml  README.md  WASM.md
src/: launch_settings.rs  logger.rs  main.rs  runtime_plugin.rs  schedule_runner.rs
src/client_resources/: resource_instance.rs  resources_manager.rs  server_settings.rs
src/clients/: client.rs  clients_container.rs  console_commands.rs  mod.rs
src/console/: commands_executer.rs  completer.rs  console_handler.rs  console_sender.rs  mod.rs
src/debug/: console_commands.rs  mod.rs  runtime_profiler.rs  runtime_reporter.rs  tps_counter.rs
src/entities/: commands.rs  entity.rs  entity_tag.rs  mod.rs  skin.rs  traits.rs
src/entities/events/: on_player_spawn.rs
src/inventory/: commands.rs  inventory_actions.rs  inventory_load_state.rs  inventory_manager.rs  inventory_state.rs  mod.rs
src/inventory/inventory_actions/: close.rs  drop.rs  helpers.rs  hooks.rs  mod.rs  move_ops.rs  (+1 more)
src/items_manager/: item_info.rs  items_manager.rs  mod.rs
src/network/: chunks_sender.rs  client_network.rs  clients_container.rs  console_commands.rs  mod.rs  runtime_plugin.rs  server.rs  sync_entities.rs  sync_inventory.rs  sync_players.rs  sync_world_change.rs
src/plugins/: mod.rs  plugin_container.rs  plugin_instance.rs  plugin_manager.rs  plugins_manager.rs  resources_archive.rs  server_settings.rs
src/storage/: mod.rs  storage_manager.rs
src/utils/: mod.rs
src/worlds/: commands.rs  console_commands.rs  ecs.rs  load_worlds.rs  mod.rs  on_chunk_loaded.rs  world_manager.rs  worlds_manager.rs
test/worlds/: Test.db
(+19 files in other folders)
